--- a/views/add_entry.jade
+++ b/views/add_entry.jade
@@ -1,40 +1,8 @@
 extends layout
 
 block content
-  h2= (entry?"Edit":"Add") + " entry"
-  div(class='container')
-    form(method='POST')
-      .form-group
-        label(for='date') Date
-        input(id="date", type='date', class='form-control', 
-          name='date', placeholder='Date', 
-          value=entry?dateFormat(entry.datetime, "mm/dd/yyyy"):""
-        )
-      .form-group
-        label(for='time') Time
-        input(type='time', class='form-control', 
-          name='time', placeholder='hh:mm (optional)',
-          value=entry?dateFormat(entry.datetime, "HH:MM"):""
-        )
-      .form-group
-        label(for='description') Description
-        input(type='text', class='form-control', 
-          name='description',placeholder='Description',
-          value=entry?entry.description:""
-        )
-      .form-group
-        label(for='amount') Amount
-        input(type='number', class='form-control',
-          name='amount', step=0.01, placeholder='Amount',
-          value=entry?entry.amount:""
-        )
-      .form-group
-        label(for='comment') Comment
-        input(type='text', class='form-control', 
-          name='comment', placeholder='Comment',
-          value=entry?entry.comment:""
-        )
-      button(class='btn btn-success')= entry?"Save":"Add"
+  include ./entry_form.jade
+  
 
 block module_css
   link(rel='stylesheet' href='/stylesheets/datepicker.css')
