--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet' href='/stylesheets/datepicker.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     block module_css
   body
@@ -10,4 +11,5 @@ html
     block content
   script(src='//code.jquery.com/jquery-1.12.0.min.js')
   script(type='text/javascript' src='/javascripts/bootstrap.min.js')
+  script(src='/javascripts/bootstrap-datepicker.js')
   block module_js
